[tool.poetry]
name = "pokemon-adventures-a-textbased-game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
getkey = "0.6.5"
replit = "^3.3.0"
colorama = "^0.4.6"
termcolor = "^2.3.0"
ascii-magic = "^2.3.0"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
